--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
